# F1_GP_Tracker

./: README.md  data.json
Formula1Tracker/: .gitignore
Formula1Tracker/frontend/: index.html  style.css
Formula1Tracker/include/: Constructor.h  Driver.h  GrandPrix.h  NetworkManager.h  Session.h
Formula1Tracker/src/: CMakeLists.txt  main.cpp
include/: Constructor.h  Driver.h
src/: main.cpp
